--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "prisma": "^6.6.0"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
+    "prisma": "^6.6.0",
+    "streamifier": "^0.1.1",
+    "zod": "^3.24.3"
   },
   "name": "orm",
   "version": "1.0.0",
@@ -29,6 +33,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/streamifier": "^0.1.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
