--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "dist/index.js",
-      "use": "@versel/node",
+      "use": "@vercel/node",
       "config": {
         "includeFiles": ["dist/**"]
       }
